--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,154 +1,160 @@
 @media screen and (max-width: 4000px) {
-    #profile {
-      height: 83vh;
-      margin-bottom: 6rem;
-    }
-    .about-containers {
-      flex-wrap: wrap;
-    }
-    #contact,
-    #projects {
-      height: fit-content;
-    }
-  
-    #tab-nav {
-      display: none;
-    }
-    #phone-nav {
-      display: none;
-  
-    }
+  #profile {
+    height: 83vh;
+    margin-bottom: 6rem;
+  }
+  .about-containers {
+    flex-wrap: wrap;
+  }
+  #contact,
+  #projects {
+    height: fit-content;
+  }
+
+  #tab-nav {
+    display: none;
+  }
+  #phone-nav {
+    display: none;
+
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  #desktop-nav {
+    display: flex;
+  }
+
+  #phone-nav {
+    display: none;
+
+  }
+
+  #tab-nav {
+    display: none;
+
+  }
+
+  #experience,
+  .experience-details-container {
+    margin-top: 2rem;
+  }
+  #profile,
+  .section-container {
+    display: block;
+  }
+  .arrow {
+    display: none;
+  }
+  section,
+  .section-container {
+    height: fit-content;
+  }
+  section {
+    margin: 0 5%;
+  }
+  .section__pic-container {
+    width: 275px;
+    height: 275px;
+    margin: 0 auto 2rem;
+  }
+
+  .section__pic-container-2 {
+    display: flex;
+    height: auto;
+    width: 100%;
+    max-width: 2750px; 
+    max-height: 275px;
+    margin-top: 1rem;
+    border-radius: 30px;
+    margin-left: 0.3rem;
+    overflow: hidden; 
   }
   
-  @media screen and (max-width: 1200px) {
-    #desktop-nav {
-      display: flex;
-    }
-  
-    #phone-nav {
-      display: none;
-  
-    }
-  
-    #tab-nav {
-      display: none;
-  
-    }
-  
-    #experience,
-    .experience-details-container {
-      margin-top: 2rem;
-    }
-    #profile,
-    .section-container {
-      display: block;
-    }
-    .arrow {
-      display: none;
-    }
-    section,
-    .section-container {
-      height: fit-content;
-    }
-    section {
-      margin: 0 5%;
-    }
-    .section__pic-container {
-      width: 275px;
-      height: 275px;
-      margin: 0 auto 2rem;
-    }
-
-    .section__pic-container-2 {
-      display: flex;
-      height: auto;
-      width: 100%;
-      max-width: 2750px; 
-      max-height: 275px;
-      margin-top: 1rem;
-      border-radius: 30px;
-      margin-left: 0.3rem;
-      overflow: hidden; 
-    }
-    
-    .section__pic-container-2 img {
-      width: 100%; 
-      height: auto; 
-      border-radius: 30px; 
-      object-fit: cover; 
-    }
-
-    .about-containers {
-      margin-top: 0;
-    }
+  .section__pic-container-2 img {
+    width: 100%; 
+    height: auto; 
+    border-radius: 30px; 
+    object-fit: cover; 
   }
-  
 
-
-  @media screen and (max-width: 600px) {
-    #desktop-nav {
-      display: none;
-    }
-  
-    #tab-nav {
-      display: none;
-    }
-  
-    #phone-nav {
-      display: flex;
-  
-    }
-    #contact,
-    footer {
-      height: 40vh;
-    }
-    #profile {
-      height: 83vh;
-      margin-bottom: 0;
-    }
-    article {
-      font-size: 1rem;
-    }
-    footer nav {
-      height: fit-content;
-      margin-bottom: 2rem;
-    }
-    .about-containers,
-    .contact-info-upper-container,
-    .btn-container {
-      flex-wrap: wrap;
-    }
-    .contact-info-container {
-      margin: 0;
-    }
-    .contact-info-container p,
-    .nav-links li a {
-      font-size: 1rem;
-    }
-    .experience-sub-title {
-      font-size: 1.25rem;
-    }
-    .logo {
-      font-size: 1.5rem;
-    }
-    .nav-links {
-      flex-direction: column;
-      gap: 0.5rem;
-      text-align: center;
-    }
-    .section__pic-container {
-      width: auto;
-      height: 46vw;
-      justify-content: center;
-    }
-    .section__text__p2 {
-      font-size: 1.25rem;
-    }
-    .title {
-      font-size: 2rem;
-    }
-    .text-container {
-      text-align: justify;
-    }
+  .about-containers {
+    margin-top: 0;
   }
-  
+
+
+
+}
+
+
+
+@media screen and (max-width: 600px) {
+  #desktop-nav {
+    display: none;
+  }
+
+  #tab-nav {
+    display: none;
+  }
+
+  #phone-nav {
+    display: flex;
+
+  }
+  #contact,
+  footer {
+    height: 40vh;
+  }
+  #profile {
+    height: 83vh;
+    margin-bottom: 0;
+  }
+  article {
+    font-size: 1rem;
+  }
+  footer nav {
+    height: fit-content;
+    margin-bottom: 2rem;
+  }
+  .about-containers,
+  .contact-info-upper-container,
+  .btn-container {
+    flex-wrap: wrap;
+  }
+  .contact-info-container {
+    margin: 0;
+  }
+  .contact-info-container p,
+  .nav-links li a {
+    font-size: 1rem;
+  }
+  .experience-sub-title {
+    font-size: 1.25rem;
+  }
+  .logo {
+    font-size: 1.5rem;
+  }
+  .nav-links {
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+  }
+  .section__pic-container {
+    width: auto;
+    height: 46vw;
+    justify-content: center;
+  }
+  .section__text__p2 {
+    font-size: 1.25rem;
+  }
+  .title {
+    font-size: 2rem;
+  }
+  .text-container {
+    text-align: justify;
+  }
+
+  #photo_slider{
+    display: none;
+  }
+}
