--- a/style.css
+++ b/style.css
@@ -283,6 +283,12 @@ section {
     color: var(--raisin-black);
   }
 
+  .section__text__p6 {
+    text-align: center;
+    margin-top: 1.5rem;
+    color: var(--white);
+  }
+
 .section__text__p2 {
   font-size: 1.75rem;
   margin-bottom: 3rem;
@@ -310,6 +316,13 @@ section {
     text-align: center;
     color: var(--raisin-black);
   }
+
+.title4{
+  font-size: 3rem;
+  text-align: center;
+  color: var(--white);
+  margin-bottom: 0.5rem;
+}
 
 #socials-container {
   display: flex;
@@ -448,18 +461,122 @@ section {
 }
 
 
+/* SLIDER SECTION */
+
+#photo_slider{
+  margin-top: 4rem;
+  margin-bottom: 1rem;
+}
+
+.wrapper {
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
+  height: 500px;
+  max-width: 100rem;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: start;
+}
+
+.card {
+  width: 80px;
+  border-radius: .75rem;
+  background-size: cover;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 2rem;
+  margin: 0 10px;
+  display: flex;
+  align-items: flex-end;
+  transition: .6s cubic-bezier(.28,-0.03,0,.99);
+  box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
+}
+
+.card > .row {
+  color: white;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.card > .row > .icon {
+  background: #223;
+  color: white;
+  border-radius: 50%;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px;
+}
+
+.card > .row > .description {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+  height: 80px;
+  width: 520px;
+  opacity: 0;
+  transform: translateY(30px);
+  transition-delay: .3s;
+  transition: all .3s ease;
+}
+
+.description p {
+  color: #b0b0ba;
+  padding-top: 5px;
+}
+
+.description h4 {
+  text-transform: uppercase;
+}
+
+input {
+  display: none;
+}
+
+input:checked + label {
+  width: 600px;
+}
+
+input:checked + label .description {
+  opacity: 1 !important;
+  transform: translateY(0) !important;
+}
+
+.card[for="c1"] {
+  background-image: url('./images/458269708_2496947483825901_3249515695000074931.jpg');
+}
+.card[for="c2"] {
+  background-image: url('./images/459651636_513074027977262_4576838433371601191_n.jpg');
+}
+.card[for="c3"] {
+  background-image: url('./images/BSIT_1204_Fetizanan_CY_PIC.jpg');
+}
+.card[for="c4"] {
+  background-image: url('./images/IMG_2764.JPG');
+}
+
+
 /* EXPERIENCE SECTION */
 
 #experience {
   position: relative;
-  margin-top: 5rem;
+  margin-top: 2rem;
+  margin-bottom: 0;
 }
 
 .experience-sub-title {
   color: rgb(116, 116, 116);
   font-weight: 600;
   font-size: 1.75rem;
-  margin-bottom: 2rem;
+  
 }
 
 .experience-details-container {
@@ -498,7 +615,7 @@ article .icon {
   padding: 3rem;
   border-top-right-radius: 5rem;
   border-bottom-left-radius: 5rem;
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 
 .color-container {
